.gitignore: ignore all directories with 'builddir' prefix

--- a/.gitignore
+++ b/.gitignore
@@ -114,7 +114,7 @@ PCbuild/win32/
 Tools/unicode/data/
 /autom4te.cache
 /build/
-/builddir/
+/builddir*/
 /config.cache
 /config.log
 /config.status
